[package]
name = "asahi-bless"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A tool to select active boot partition on ARM Macs"
homepage = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"
repository = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1"
gpt = "3"
clap = { version = "4.4.11", features = ["derive"] }

[dependencies.apple-nvram]
path = "../apple-nvram"
version = "0.2"
