[package]
name = "asahi-btsync"
license = "MIT"
version = "0.2.2"
edition = "2021"
description = "A tool to sync Bluetooth pairing keys with macos on ARM Macs"
homepage = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"
repository = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"


[dependencies]
dbus = "0.9.7"
regex = "1.11.1"
rust-ini = "0.18.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.apple-nvram]
path = "../apple-nvram"
version = "0.3"

[dependencies.clap]
version = "3"
features = ["cargo"]

