[package]
name = "asahi-wifisync"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-ini = "0.18.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nvram]
path = "../nvram"

[dependencies.clap]
version = "3"
features = ["cargo"]

