[package]
name = "asahi-wifisync"
license = "MIT"
version = "0.1.0"
edition = "2021"

description = "A tool to sync Wifi passwords with macos on ARM Macs"
homepage = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"
repository = "https://github.com/WhatAmISupposedToPutHere/asahi-nvram"

[dependencies]
rust-ini = "0.18.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.apple-nvram]
path = "../apple-nvram"
version = "0.1"

[dependencies.clap]
version = "3"
features = ["cargo"]

